# optiproof

./: .gitignore  README.md  conftest.py  pyproject.toml
.claude/skills/optiproof/: SKILL.md
benchmarks_corpus/: __init__.py  cases.py
docker/: Dockerfile
optiproof/: __init__.py  cli.py  models.py  orchestrator.py  patch.py  scorer.py
optiproof/adapters/: __init__.py  base.py  go_adapter.py  python_adapter.py  rust_adapter.py
optiproof/bench/: __init__.py  environment.py  runner.py  stats.py
optiproof/llm/: __init__.py  anthropic_provider.py  base.py  claude_code_provider.py  null_provider.py  prompts.py
optiproof/profiling/: __init__.py
optiproof/reporting/: __init__.py  json_report.py  terminal.py
optiproof/sandbox/: __init__.py  base.py  docker_sandbox.py  local_sandbox.py  workspace.py
optiproof/verify/: __init__.py  compare.py  correctness.py  differential.py  input_gen.py  probe.py
tests/: test_e2e_null.py  test_review_fixes.py
tests/adapters/: test_go_adapter.py  test_python_adapter.py  test_rust_adapter.py
tests/unit/: test_compare.py  test_patch.py  test_stats.py
