[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optiproof"
version = "0.1.0"
description = "Proof-carrying, polyglot code optimizer — like code review, but it optimizes code and proves the speedup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
    "scipy>=1.10",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7"]

[project.scripts]
optiproof = "optiproof.cli:app"

[tool.setuptools.packages.find]
include = ["optiproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
